change site fixes, layout fixes, sidebar button firefox fix

--- a/less/custom/change/custom.less
+++ b/less/custom/change/custom.less
@@ -1,4 +1,18 @@
+ @import "../../framework/base/variables.less"; // Modify this for custom colors, font-sizes, etc
+ @import "../../framework/base/mixins.less";
+
+.sub-menu {
+  display: none;
+}
+
+.row-fluid .primary-content-area {
+    width: 100%;
+}
+
+
 @media (min-width: 43.125em) {
+
+
 
 //*****************************************
 //** NAVIGATION
@@ -38,11 +52,138 @@
     }
   }
  }
- }
- 
-   .navigation-inner .main-navigation > li:nth-child(2):hover .sub-menu{
-    right: -303px;
+
+   .main-navigation > li .sub-menu {
+    display: block;
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    overflow: hidden;
   }
+  
+  .main-navigation > li:hover .sub-menu {
+    display: block;
+    visibility: visible;
+    width:  auto;
+    height: auto;
+    .opacity(100);
+  }
+
+  .main-navigation > li .sub-menu {
+    position: absolute;
+    top: 2.8em;
+    left: 0em;
+    right:0em;
+    z-index: 100;
+    background: #fff;
+    .border-radius(0px 0px 4px 4px);
+    padding: 1% 2%;
+    // #gradient > .vertical-three-colors(#fbfbfb, #ffffff, 33%, #E7EDE7);
+    .box-shadow(inset 0px 1px 1px #ddd, 0px 5px 15px rgba(0,0,0,0.2));
+    border: 1px solid #ccd6cc;
+    border-bottom: 3px solid #7ac900;
+    border-top: 1px solid #acb1af;
+    .transition(opacity 0.1s linear);
+    .opacity(0);
+  }
+
+  .sub-menu ul li a {
+    text-align:left;
+  }
+  
+  .sub-menu .section-description {
+    text-align:left;
+    font-size:0.9em;
+    line-height:1.5em;
+  }
+
+  .sub-menu ul,
+  .sub-menu ul li,
+  .sub-menu ul li a {
+    display: block;
+    width: auto;
+    margin: 0;
+    padding: 0;
+  }
+
+  .sub-menu .section-title {
+    display: none;
+  }
+  
+  .sub-menu .section-navigation,
+  .sub-menu .section-description {
+    display: inline-block;
+    vertical-align: top;
+    margin-right:-4px;
+    width: 48%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+
+  .sub-menu .section-description { max-width:30em; }
+
+  .sub-menu-content { text-align: left; }
+  
+  .sub-menu .section-navigation {
+    margin-right:4%;
+  }
+  
+  .sub-menu .section-description {
+    padding: 0.3em 0 0.15em 0em;
+    
+  }
+
+  .sub-menu ul li a {
+    font-family: sans-serif;
+    text-transform: none;
+    border: none;
+    border-bottom: 1px dotted #ddd;
+    padding: 2% 0;
+    color: @linkColor;
+    line-height: 1.2em;
+    
+    &:hover {
+      color: @linkColorHover;
+      padding-left:4.5%;
+      padding-right: 2%;
+      margin-left: -4.5%;
+      margin-right: -2%;
+      background:  #FFF5B8;
+      border-top: 1px solid #E1D8A4;
+      border-bottom: 1px solid #E1D8A4;
+      border-right: 1px solid #E1D8A4;
+      margin-top: -1px;
+      text-shadow: none;
+      .border-radius(0px 4px 4px 0px);
+    }
+  }
+ 
+
+ }
+
+
+@media (min-width: 61.25em) {
+  .sub-menu {
+    left: 3%;
+    right:3%;
+  }
+
+  .sub-menu ul li a {
+    padding: 1% 0;
+  }
+  .content-wrapper.full-width .row-fluid .primary-content-area {
+    width:78%;
+  }
+}
+
+@media (min-width: 75em) {
+  .sub-menu {
+    left: 5%;
+    right:5%;
+  }
+}
+ 
 
  .horizontal-line{
 	 margin-top:10px;
@@ -82,7 +223,7 @@ p.join-the-convo-btn{
 }
 @media (min-width: 43.125em) and (max-width: 61.1875em) {
 	.row-fluid .sidebar{
-	width:21%;
+	width:100%;
 	position:inherit;
 	}
 }
