--- a/less/faculty/pages/layout.less
+++ b/less/faculty/pages/layout.less
@@ -346,7 +346,7 @@
     }
     .sidebar > .extrude {
       margin-left:0;
-      margin-bottom:1em;
+      margin-bottom:1.57em;
       width:auto;
       display:block;
       max-width: none;
@@ -448,7 +448,7 @@
     }
     .span12 + .sidebar > .extrude {
       width:auto;
-      margin:0 0 1em;
+      margin:0 0 1.57em;
       display:block;
     }
   }
