--- a/less/framework/base/buttons.less
+++ b/less/framework/base/buttons.less
@@ -167,7 +167,7 @@ a.btn {
 .btn-apply.btn-micro:after,
 .btn-give.btn-micro:after,
 .btn-work.btn-micro:after {
-top: 48%;
+  top: 48%;
 }
 
 .btn-large { font-size: 1.4em; }
@@ -184,7 +184,6 @@ top: 48%;
   left: 0;
   right: 0;
   padding: 0.8333em 0.8333em 0.8333em 2em;
-  height: 3em;
   box-sizing: border-box;
   font-weight: bold;
   background: #f4faf6;
