--- a/less/framework/modules/fma-module.less
+++ b/less/framework/modules/fma-module.less
@@ -201,11 +201,6 @@ html[xmlns] .slides {display: block;}
   }
 }
 
-@media (max-width: 43.0625em) {
-	.dino101 .content-holder {
-		background-position: 70% 0;
-	}
-}
 
 @media (min-width: 61.25em) {
   .fma-container.image-slider .fma-slide img.fma-background {
@@ -243,12 +238,6 @@ html[xmlns] .slides {display: block;}
     width: 878px;
     height: 313px;
   }
-  .fma-small-dino.image-caption-container .caption {
-  	background: rgba(0,0,0,0.45);
-  	.logo-link {
-  		 background-image: url(-/media/digitallearning/dino101/fma-dino-logo-small.png);
-  	}
-  }
 }
 
 @media (min-width: 43.125em) and (max-width: 61.1875em) {
@@ -259,14 +248,5 @@ html[xmlns] .slides {display: block;}
   .thumbnail-container .frame {
     width: 165px;
   }
-  .fma-small-dino.image-caption-container .caption {
-  	background: rgba(0,0,0,0.45);
-  	.logo-link {
-  		 background-image: url(-/media/digitallearning/dino101/fma-dino-logo-small.png);
-  	}
-  }
-  // Fix sidebar positioning under FMA on Dino hub
-  .campuslife.dino101 .sidebar {
-  	top: 509px;
-  }
+
 }
