--- a/less/framework/modules/link-bucket.less
+++ b/less/framework/modules/link-bucket.less
@@ -50,6 +50,8 @@
         right: 0;
         padding: 0.8333em 0.8333em 0.8333em 2em;
         height: 3em;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
         box-sizing: border-box;
         background: #f4faf6;
         font-weight: bold;
